Fixed layout problem when displaying sub assets

--- a/fid-web/src/main/webapp/style/pageStyles/asset.css
+++ b/fid-web/src/main/webapp/style/pageStyles/asset.css
@@ -136,6 +136,10 @@
 	padding-bottom: 10px;
 }
 
+.leftViewSection p {
+	overflow: hidden;
+}
+
 .leftViewSection p, .columnRight p{
 	line-height: 1.6em;
 	padding-left: 15px;
